--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#">Contact Us</a></li>
     </ul>
     <div class="burger">
       <div class="burger-top"></div>
